2018-02-09  Joshua Watt  <JPEWhacker@gmail.com>

	* cfi.c (execute_cfi): Use FALLTHROUGH macro instead of comment.
	* dwarf_frame_register.c (dwarf_frame_register): Likewise.

2018-01-22  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (AM_CPPFLAGS): Add -I libdwelf.
	* dwarf_begin_elf.c (dwarf_begin_elf): Initialize Dwarf alt_fd to -1.
	* dwarf_end.c (dwarf_end): Call dwarf_end and close on the alt_dwarf
	and alt_fd if we allocated them.
	* dwarf_fromref_die.c (dwarf_formref_die): Call dwarf_getalt.
	* dwarf_formstring.c (dwarf_formstring): Likewise.
	* dwarf_getalt.c (__libdw_filepath): New internal function.
	(find_debug_altlink): New static function.
	(dwarf_getalt): Check Dwarf alt_dwarf and call find_debug_altlink.
	Cache result.
	* dwarf_setalt.c (dwarf_setalt): Clean up Dwarf alt_dwarf and alt_fd
	if we allocated.
	* libdw.h (dwarf_getalt): Extend documentation.
	(dwarf_setalt): Likewise.
	* libdwP.h (struct Dwarf): Add alt_fd field.
	(filepath): Declare new internal function.

2018-01-14  Petr Machata  <pmachata@gmail.com>

	* dwarf_formsdata.c (dwarf_formsdata):
	<DW_FORM_data1>: Cast to signed char.
	<DW_FORM_data2,4,8>: Use read_*sbyte_unaligned instead of
	read_*ubyte_unaligned.

2017-12-26  Mark Wielaard  <mark@klomp.org>

	* libdwP.h (struct Dwarf_Abbrev): Pack struct. Remove attrcnt,
	use bitfields for has_children and code.
	* dwarf_getabbrev.c (__libdw_getabbrev): Don't count attrs.
	* dwarf_getattrcnt.c (dwarf_getattrcnt): Count attrs.

2017-12-26  Mark Wielaard  <mark@klomp.org>

	* memory-access.h (__libdw_get_uleb128_unchecked): New function.
	(get_uleb128_unchecked): New define.
	* dwarf_child.c (__libdw_find_attr): Use get_uleb128_unchecked to
	read attr name and form.
	* dwarf_getabbrevattr.c (dwarf_getabbrevattr): Likewise.
	* dwarf_getattrs.c (dwarf_getattrs): Likewise.
	* dwarf_hasattr.c (dwarf_hasattr): Likewise.

2017-12-28  Mark Wielaard  <mark@klomp.org>

	* dwarf_offdie.c (__libdw_offdie): Check sectiondata exists.
